--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 # Created by https://www.gitignore.io/api/git,linux,macos,python,windows,pycharm,virtualenv
 # Edit at https://www.gitignore.io/?templates=git,linux,macos,python,windows,pycharm,virtualenv
 
+### Own rules ###
+device_ids.json
+
 ### Git ###
 # Created by git for backups. To disable backups in Git:
 # $ git config --global mergetool.keepBackup false
