--- a/config.yaml
+++ b/config.yaml
@@ -4,21 +4,22 @@ sensors:
     send_interval: 10
     reads_per_minute: 240
     module_id: 0
-    module_name: 'Test Sensor 1'
+    module_name: 'mic_0'
     params:
       port: 0
   - script_path: 'sensors/sensor_dht.py'
     send_interval: 10
     reads_per_minute: 40
     module_id: 0
-    module_name: 'Test Sensor 1'
+    module_name: 'dht_0'
     params:
       port: 7
+      dht_type: 0
   - script_path: 'sensors/sensor_pir.py'
     send_interval: 10
     reads_per_minute: 240
     module_id: 0
-    module_name: 'Test Sensor 1'
+    module_name: 'pir_0'
     params:
       port: 8
 actuators:
